# template-python

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: actions.yaml  docker-image-to-aws-ecr.yaml  lint.yml
tests/: test_package.py
